@@ -1,3 +1,11 @@
+2012-12-08  Ryosuke Niwa  <rniwa@webkit.org>
+
+        Qt Linux Minimal build fix attempt after r136959.
+
+        * inspector/InspectorInstrumentation.h:
+        (WebCore::InspectorInstrumentation::layerTreeDidChange):
+        (WebCore::InspectorInstrumentation::renderLayerDestroyed):
+
 2012-12-08  Xan Lopez  <xlopez@igalia.com>
 
         Build fix after r137003. Wrap Microdata only sections with ENABLE(MICRODATA).
